package dev.appkr.kata;

public interface Transcoder {

  String transcode(String input);
}
